# ChangeLog for games-simulation/secondlife-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/secondlife-bin/Attic/ChangeLog,v 1.8 2008/12/20 01:06:17 lavajoe Exp $

*secondlife-bin-1.22_rc4 (20 Dec 2008)

  20 Dec 2008; Joe Peterson <lavajoe@gentoo.org>
  +secondlife-bin-1.22_rc4.ebuild:
  Add new rc4

*secondlife-bin-1.22_rc3 (14 Dec 2008)

  14 Dec 2008; Joe Peterson <lavajoe@gentoo.org>
  +secondlife-bin-1.22_rc3.ebuild:
  Add new rc3

*secondlife-bin-1.22_rc2-r1 (07 Dec 2008)

  07 Dec 2008; Joe Peterson <lavajoe@gentoo.org>
  secondlife-bin-1.21.6.ebuild, -secondlife-bin-1.22_rc1.ebuild,
  -secondlife-bin-1.22_rc2.ebuild, +secondlife-bin-1.22_rc2-r1.ebuild:
  Set VersionChannelName when running so new upstream releases do not break
  existing versions (bug #249894); remove old version

*secondlife-bin-1.22_rc2 (04 Dec 2008)

  04 Dec 2008; Joe Peterson <lavajoe@gentoo.org>
  +secondlife-bin-1.22_rc2.ebuild:
  Add new rc2

  01 Dec 2008; Joe Peterson <lavajoe@gentoo.org> metadata.xml:
  Update proxy maintainer email

*secondlife-bin-1.22_rc1 (27 Nov 2008)
*secondlife-bin-1.21.6 (27 Nov 2008)

  27 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  +secondlife-bin-1.21.6.ebuild, -secondlife-bin-1.21.6.99587.ebuild,
  +secondlife-bin-1.22_rc1.ebuild, -secondlife-bin-1.22.1_rc103637.ebuild:
  Change versioning to match upstream conventions

*secondlife-bin-1.22.1_rc103637 (27 Nov 2008)

  27 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  +secondlife-bin-1.22.1_rc103637.ebuild,
  -secondlife-bin-1.22.1.103637.ebuild:
  Set version of latest to indicate 'release candidate' status

*secondlife-bin-1.22.1.103637 (27 Nov 2008)
*secondlife-bin-1.21.6.99587 (27 Nov 2008)

  27 Nov 2008; Joe Peterson <lavajoe@gentoo.org> +metadata.xml,
  +secondlife-bin-1.21.6.99587.ebuild, +secondlife-bin-1.22.1.103637.ebuild:
  New package: Second Life viewer binary
  Contributed by Toei Rei <toei.rei@stargazer.at>
