@@ -1,10 +1,8 @@
 DIST SecondLife-i686-1.21.6.99587.tar.bz2 37651707 RMD160 cf704a3501059da6b18ec09b8914ddb671ec9ace SHA1 ffbe865b5c9632f8ee75249be0150ec80c2ac1b6 SHA256 3c502401b673dada8ddb1412953a3984f17454913c552791153a175614d66509
-DIST SecondLife-i686-1.22.2.104576.tar.bz2 37680483 RMD160 c9f36595cbec478ff80177deafa5e37d2bebc525 SHA1 c9a2a1a762770f4c0b1bdba0931486bd8c86d054 SHA256 5db5d953726b9d679a8a9b6992e448c45ba783b7a08a02e95bf9a25f2a185488
-DIST SecondLife-i686-1.22.3.105377.tar.bz2 37841210 RMD160 a1e8a9f16627f09a4f48cf0a28ad31ee7e609f29 SHA1 cd477484cd20b07f98ab6ab95397bfdf2b55a7dd SHA256 714197dc1226df01407d28dcd32bc7d423ed5d97fa6ef5cddf10594a17dcbec2
 DIST SecondLife-i686-1.22.4.106127.tar.bz2 37869901 RMD160 4d84a8bcef1b69b03104d943ebc77845c4e7b6d9 SHA1 63b72f2556989dea6f2c106403d3fa4fab048cd7 SHA256 c2e1cd2c98ddb55fbd5d094a21d65d20a966eeab736e51258ceee258e9af3dd2
+DIST SecondLife-i686-1.22.5.107013.tar.bz2 37876869 RMD160 ecef55da23f185babf3f82284dc37dd6cde01823 SHA1 54a54941f001b9a36af28d910bb09191fc439de5 SHA256 7e18b9a71fcf81b1800ccc30d8c4a78172a9f8f7a6fd4c0e66a0e91e403eee6a
 EBUILD secondlife-bin-1.21.6.ebuild 2550 RMD160 fc7334bd2eb0fe706231178f0c1d45df46761981 SHA1 80d80ff186025e02b714e17071ef8201d0e0d10f SHA256 3fe4786ae694685d30ced291e7809c264761f8275873476999590a05e17eb9f8
-EBUILD secondlife-bin-1.22_rc2-r1.ebuild 2778 RMD160 6ec916e50c979643094c0712a563a7e168d3a450 SHA1 2aa71d069e7aa8969bae6e1d6e2b0d118f337f96 SHA256 655a37a6eef16f096193aac03dccfc5fc2a42e6c4f4e94ef27152c6a11b6db94
-EBUILD secondlife-bin-1.22_rc3.ebuild 2775 RMD160 0cfae9dd534628a0455b180aee78100b79424c1a SHA1 be680a36fb74fde62bf1ce041f24999f58405ee3 SHA256 2c62f9871a6273f2db65aac95cd8bcc10e2d3201d305eba51514fe9436ac2db5
 EBUILD secondlife-bin-1.22_rc4.ebuild 2775 RMD160 7f374cbb68a58683c89a6a17bf808023d32bae2c SHA1 57f323c900ea1276dd3ecb77ea23793a98131b22 SHA256 6c40f06c0095a79c6ed99824dad383f3903ad4bb8b1f2c0cce105e0c9c2b5b8d
-MISC ChangeLog 1993 RMD160 a905ca5560dbad4513fc989e4de72c3f6822777b SHA1 4e7ec2ab5c196d387270128649eb7734bec2cf3b SHA256 58fe3e0e032a836135c3f9fab8a807fec6f06bab411674cb06199425ebbb3c54
+EBUILD secondlife-bin-1.22_rc5.ebuild 2775 RMD160 2e51825c9a880666d48e22c3bdd67e909b90fd61 SHA1 f0e6872f7da40353ebcd4769146f0751b2a33e12 SHA256 86e4050c5bf6a2ac9da56ead9e15251a524b67fa9ede42f5cd656a19897b1f35
+MISC ChangeLog 2224 RMD160 8abf0d8fe53378fa5f59ae3d500625dceadf45c9 SHA1 80b88931813fd9ad4b8ebe3b41fa5a0870d78e24 SHA256 bf059ff4870d5b6a356127541bb32bb31370e66863eefb03d9e4ae479e7881ca
 MISC metadata.xml 310 RMD160 6387721976b5a6d1d20ea38eae46fe73a71b02f6 SHA1 f9b48d99a6501d5f3334885520749ccca91e0f1a SHA256 202d025172afc259b392b962d75fb5fab535a4810a7ef90dcb26b1de74f961e0
